--- a/app.json
+++ b/app.json
@@ -1,16 +1,20 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/logs/logs",
-    "pages/courseList/courseList"
+    "pages/courseList/courseList",
+    "pages/map/map",
+    "pages/introduce/introduce",
+    "pages/live/live",
+    "pages/memberRanking/memberRanking"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "俱乐部小程序",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
-  "tabBar":{
+  "tabBar": {
     "list": [
       {
         "pagePath": "pages/index/index",
