完成团体课预约功能

--- a/app.json
+++ b/app.json
@@ -2,7 +2,9 @@
   "pages":[
     "pages/index/index",
     "pages/logs/logs",
-    "pages/courseList/courseList"
+    "pages/courseList/courseList",
+    "pages/courseDeal/courseDeal",
+    "pages/mine/mine"
   ],
   "window":{
     "backgroundTextStyle":"light",
