首页完成扫码功能,添加客服功能,添加商品详情功能
2018-05-08 18:22

--- a/app.json
+++ b/app.json
@@ -8,7 +8,9 @@
     "pages/map/map",
     "pages/introduce/introduce",
     "pages/live/live",
-    "pages/memberRanking/memberRanking"
+    "pages/memberRanking/memberRanking",
+    "pages/product/product",
+    "pages/order/order"
   ],
   "window": {
     "backgroundTextStyle": "light",
