--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
     "pages/courseList/courseList",
     "pages/courseDeal/courseDeal",
     "pages/mine/mine",
-    "pages/myOrder/myOrder"
+    "pages/myOrder/myOrder",
+    "pages/myWallet/myWallet",
+    "pages/cash/cash"
   ],
   "window": {
     "backgroundTextStyle": "light",
