--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/paySuccess/paySuccess",
     "pages/index/index",
     "pages/logs/logs",
     "pages/map/map",
@@ -8,6 +9,7 @@
     "pages/memberRanking/memberRanking",
     "pages/product/product",
     "pages/order/order",
+    "pages/ticket/ticket",
     "pages/courseList/courseList",
     "pages/courseDeal/courseDeal",
     "pages/mine/mine",
