添加我的优惠券,我的挑战
2018-05-14 19:12

--- a/app.json
+++ b/app.json
@@ -9,10 +9,12 @@
     "pages/product/product",
     "pages/order/order",
     "pages/ticket/ticket",
+    "pages/activeTicket/activeTicket",
     "pages/paySuccess/paySuccess",
     "pages/active/active",
     "pages/activeDetail/activeDetail",
     "pages/joinActive/joinActive",
+    "pages/myActive/myActive",
     "pages/courseList/courseList",
     "pages/courseDeal/courseDeal",
     "pages/mine/mine",
