绑定提现账号页面、功能

--- a/app.json
+++ b/app.json
@@ -18,7 +18,10 @@
     "pages/mine/mine",
     "pages/myOrder/myOrder",
     "pages/myWallet/myWallet",
-    "pages/cash/cash"
+    "pages/cash/cash",
+    "pages/bindAccount/bindAccount",
+    "pages/myAppointment/myAppointment"
+
   ],
   "window": {
     "backgroundTextStyle": "light",
