添加我的足迹,修改我的挑战详情
2018-05-15 19:05

--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
     "pages/activeDetail/activeDetail",
     "pages/joinActive/joinActive",
     "pages/myActive/myActive",
+    "pages/myFooter/myFooter",
     "pages/courseList/courseList",
     "pages/courseDeal/courseDeal",
     "pages/mine/mine",
