修改首页,挑战登录检查
2018-05-16 09:44

--- a/app.json
+++ b/app.json
@@ -16,6 +16,7 @@
     "pages/joinActive/joinActive",
     "pages/myActive/myActive",
     "pages/myFooter/myFooter",
+    "pages/memberEvaluate/memberEvaluate",
     "pages/courseList/courseList",
     "pages/courseDeal/courseDeal",
     "pages/mine/mine",
