--- a/app.json
+++ b/app.json
@@ -24,7 +24,11 @@
     "pages/myWallet/myWallet",
     "pages/cash/cash",
     "pages/bindAccount/bindAccount",
-    "pages/myAppointment/myAppointment"
+    "pages/myAppointment/myAppointment",
+    "pages/plan/plan",
+    "pages/planDetail/planDetail",
+    "pages/private/private",
+    "pages/setting/setting"
     
 
   ],
