添加健身卡使用俱乐部列表,修改图片显示
2018-05-23 11:07

--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "pages/live/live",
     "pages/memberRanking/memberRanking",
     "pages/product/product",
+    "pages/clubList/clubList",
     "pages/order/order",
     "pages/ticket/ticket",
     "pages/activeTicket/activeTicket",
