添加请人流汗页面
2018-05-28 16:48

--- a/app.json
+++ b/app.json
@@ -18,6 +18,7 @@
     "pages/myActive/myActive",
     "pages/myFooter/myFooter",
     "pages/memberEvaluate/memberEvaluate",
+    "pages/qrlh/qrlh",
     "pages/courseList/courseList",
     "pages/courseDeal/courseDeal",
     "pages/mine/mine",
