添加优惠券详情页面
2018-06-04 10:16

--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "pages/clubList/clubList",
     "pages/order/order",
     "pages/ticket/ticket",
+    "pages/ticketDetail/ticketDetail",
     "pages/activeTicket/activeTicket",
     "pages/paySuccess/paySuccess",
     "pages/active/active",
