修改首页和我的页面按钮位置
2018-07-09 10:03

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "pages/logs/logs",
     "pages/map/map",
     "pages/introduce/introduce",
+    "pages/video/video",
     "pages/live/live",
     "pages/liveDetail/liveDetail",
     "pages/releaseLive/releaseLive",
