修改专家系统添加识别小程序码

--- a/app.json
+++ b/app.json
@@ -43,6 +43,7 @@
     "pages/planDetail/planDetail",
     "pages/private/private",
     "pages/setting/setting",
+    "pages/qrcode/qrcode",
     "pages/priceCutdown/priceCutdown",
     "pages/coachList/coachList",
     "pages/coachDetail/coachDetail",
